# drake

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  tmp_repro.md  tmp_repro.py
cmake/: bazel.rc.in
common/: BUILD.bazel  cond.h  nice_type_name.h  type_safe_index.h  value.h
doc/: sphinx_base.py  sphinx_build.py  system_doxygen.py
examples/multibody/potato/: BUILD.bazel  hydro_potato.cc
examples/multibody/potato/models/: peeler.sdf  texture_123-87.mtl  texture_123-87.sdf
examples/so3_integ_bug/: BUILD.bazel  cc_py.cc  spatial_trajectories.py  venv.requirements.freeze.txt  venv.requirements.txt
examples/so3_integ_bug/test/: spatial_trajectories_test.py
geometry/: geometry_properties.h  meshcat.cc  meshcat.h  meshcat.html  meshcat_types.h  meshcat_visualizer.cc  meshcat_visualizer.h  proximity_engine.cc  scene_graph.h  scene_graph_inspector.cc  scene_graph_inspector.h
solvers/: mathematical_program.cc  mathematical_program.h
tmp/: .gitignore  BUILD.bazel  README.md  autodiff_eq.cc  autodiff_equal_to.py  benchmark.cc  benchmark_against_master_and_commit_results.py  bleh.py  bleh_lib_py.cc  cc_docstrings_transform.py  cc_py.cc  cc_py_test.py  convert.py  convert_py.cc  cube.urdf  cube_sim_test.py  documentation_pybind.h  drake_ipopt_issue.py  hack_n_slash_py.cc  kneed_compass_gait.py  kneed_compass_gait.urdf  label_demo.ipynb  meshcat_bug.py  min_repro.py  model_check.ipynb  model_check.py  naive_warning.output.txt  naive_warning.py  output_first.txt  replace.py  repro.cc  repro.py  repro.sh  repro_issue15216.py  repro_min.cc  run_benchmark.sh  strace_first.raw.txt  strace_first.sorted.txt  strace_last.raw.txt  strace_last.sorted.txt  (+3 more)
tmp/benchmark/: BUILD.bazel  model_benchmark.py
tmp/benchmark/data/bindings/pydrake/multibody/test/: double_pendulum.sdf.yaml  hydroelastic.sdf.yaml  two_bodies.sdf.yaml
tmp/benchmark/data/examples/acrobot/: Acrobot.sdf.yaml
tmp/benchmark/data/examples/allegro_hand/joint_control/: simple_mug.sdf.yaml
tmp/benchmark/data/examples/atlas/sdf/cinder_block_2/: model.sdf.yaml
tmp/benchmark/data/examples/atlas/sdf/cinder_block_wide/: model.sdf.yaml
tmp/benchmark/data/examples/atlas/sdf/ground_plane/: model.sdf.yaml
tmp/benchmark/data/examples/kuka_iiwa_arm/models/desk/: transcendesk55inch.sdf.yaml
tmp/benchmark/data/examples/kuka_iiwa_arm/models/table/: extra_heavy_duty_table.sdf.yaml  extra_heavy_duty_table_surface_only_collision.sdf.yaml
tmp/benchmark/data/examples/manipulation_station/models/: 061_foam_brick.sdf.yaml  amazon_table_simplified.sdf.yaml  bin.sdf.yaml  cupboard.sdf.yaml  cylinder.sdf.yaml  sphere.sdf.yaml  thin_box.sdf.yaml  thin_cylinder.sdf.yaml
tmp/benchmark/data/examples/multibody/cart_pole/: cart_pole.sdf.yaml
tmp/benchmark/data/examples/multibody/four_bar/: four_bar.sdf.yaml
tmp/benchmark/data/examples/planar_gripper/: planar_brick.sdf.yaml  planar_gripper.sdf.yaml
tmp/benchmark/data/examples/quadrotor/: warehouse.sdf.yaml
tmp/benchmark/data/examples/simple_gripper/: simple_gripper.sdf.yaml  simple_mug.sdf.yaml
tmp/benchmark/data/manipulation/models/allegro_hand_description/sdf/: allegro_hand_description_left.sdf.yaml  allegro_hand_description_right.sdf.yaml
tmp/benchmark/data/manipulation/models/iiwa_description/iiwa7/: iiwa7_no_collision.sdf.yaml  iiwa7_with_box_collision.sdf.yaml
tmp/benchmark/data/manipulation/models/iiwa_description/sdf/: iiwa14_no_collision.sdf.yaml  iiwa14_polytope_collision.sdf.yaml
tmp/benchmark/data/manipulation/models/wsg_50_description/sdf/: schunk_wsg_50.sdf.yaml  schunk_wsg_50_ball_contact.sdf.yaml  schunk_wsg_50_no_tip.sdf.yaml  schunk_wsg_50_with_tip.sdf.yaml
tmp/benchmark/data/manipulation/models/ycb/sdf/: 003_cracker_box.sdf.yaml  004_sugar_box.sdf.yaml  005_tomato_soup_can.sdf.yaml  006_mustard_bottle.sdf.yaml  009_gelatin_box.sdf.yaml  010_potted_meat_can.sdf.yaml
tmp/benchmark/data/multibody/benchmarks/acrobot/: acrobot.sdf.yaml
tmp/benchmark/data/multibody/contact_solvers/test/: particle_with_infinite_inertia.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/: links_with_visuals_and_collisions.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/box_package/sdfs/: box.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/drake_manifest_resolution_test/: cube_visual.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/package_map_test_packages/package_map_test_package_a/sdf/: test_model.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/process_model_directives_test/: simple_model.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/sdf_parser_test/: all_geometries_as_collision.sdf.yaml  all_geometries_as_visual.sdf.yaml  collision_filter_group_parsing_test.sdf.yaml  frames_as_joint_parent_or_child.sdf.yaml  include_models.sdf.yaml  joint_actuator_parsing_test.sdf.yaml  model_with_directly_nested_models.sdf.yaml  revolute_spring_parsing_test.sdf.yaml  very_old_version.sdf.yaml  world_with_directly_nested_models.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/sdf_parser_test/interface_api_test/: gripper.sdf.yaml  mug.sdf.yaml  table.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/sdf_parser_test/simple_robot1/: simple_robot1.sdf.yaml
tmp/benchmark/data/multibody/parsing/test/sdf_parser_test/simple_robot2/: simple_robot2.sdf.yaml
tmp/benchmark/data/multibody/plant/test/: block_on_halfspace.sdf.yaml  box.sdf.yaml  split_pendulum.sdf.yaml
tmp/benchmark/data/systems/sensors/models/: box.sdf.yaml  sphere.sdf.yaml
tmp/benchmark/data/systems/sensors/test/models/: box.sdf.yaml  box_with_mesh.sdf.yaml  nothing.sdf.yaml  sphere.sdf.yaml
tmp/benchmark/test/: model_regression_test.py
tmp/test/: convert_test.py  double_integrator_cc_test.cc  double_integrator_py_test.py  double_integrator_test.py
tools/: BUILD.bazel  ubuntu-bionic.bazelrc
tools/workspace/drake_visualizer/: BUILD.bazel  _exec_drake_visualizer_with_plugins.py  drake_visualizer_bazel.py  drake_visualizer_installed.py
tools/workspace/drake_visualizer/plugin/: BUILD.bazel
tools/workspace/drake_visualizer/test/: drake_visualizer_bazel_help_test.py
(+272 files in other folders)
