# -*- python -*-

load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

venv_dir = "venv/lib/python3.10/site-packages"

py_library(
    name = "hack_venv_py",
    data = glob(
        include = [venv_dir + "/**"],
        exclude = [
            "* *",
            "**/setuptools/**",
        ],
    ),
    imports = [venv_dir],
)

drake_py_library(
    name = "spatial_trajectories_py",
    srcs = ["spatial_trajectories.py"],
    imports = ["."],
    deps = [
        ":hack_venv_py",
        "//bindings/pydrake",
    ],
)

drake_py_unittest(
    name = "spatial_trajectories_test",
    deps = [
        ":spatial_trajectories_py",
        "//bindings/pydrake",
    ],
)

# Linting deliberately ignored.
