# -*- python -*-

load("//tools/skylark:py.bzl", "py_library")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("@drake//tools/install:install.bzl", "install")

exports_files(
    # To be consumed by `//tools:drake_visualizer_py`.
    ["drake_visualizer_bazel.py"],
    visibility = ["//tools:__pkg__"],
)

py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    visibility = [":__subpackages__"],
    deps = ["//tools/workspace:module_py"],
)

py_library(
    name = "exec_drake_visualizer_with_plugins_py",
    srcs = "_exec_drake_visualizer_with_plugins.py",
    deps = [
        "//tools/workspace/drake_visualizer/plugin",
    ],
    visibility = ["//tools:__pkg__"],
)

# When developing within Drake, we don't want //tools:drake_visualizer to
# depend on the entire pydrake library, because that adds a dependency on a
# whole bunch of C++ code that is irrelevant for the visualizer.  So, here we
# provide a small stub version of pydrake with only getDrakePath implemented
# (the only piece drake_visualizer needs).  Note that the installed version of
# drake-visualizer *does* use the installed (full) version of pydrake -- this
# is development-sandbox-only stub.
py_library(
    name = "stub_pydrake",
    srcs = ["stub/pydrake/__init__.py"],
    visibility = ["//tools:__pkg__"],
)

# N.B. This should be removed if upstream packages are installed.
install_file_copies(
    name = "install_blank_py_modules",
    src = "_blank_init.py",
    dest_list = [
        "@PYTHON_SITE_PACKAGES@/drake/tools/__init__.py",
        "@PYTHON_SITE_PACKAGES@/drake/tools/workspace/__init__.py",
    ],
)

add_lint_tests(
    python_lint_extra_srcs = [
        "drake_visualizer_installed.py",
    ],
)
